refactor: Update env example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-# Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/habit_tracker_db
+# Node Environment
+NODE_ENV=development
+
+# Application Stage
+APP_STAGE=dev
 
 # Server Configuration
 PORT=3000
-NODE_ENV=development
+HOST=localhost
+
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/habit_tracker_db
 
 # JWT Configuration
 JWT_SECRET=add_your_super_secret_jwt_key_here
